# circuit_breaker

./: Cargo.toml  LICENSE  README.md
benches/: performance.rs
examples/: basic_usage.rs
src/: circuit_breaker.rs  circuit_state.rs  error.rs  lib.rs
tests/: integration_tests.rs
