[package]
name = "circuit_breaker"
version = "0.1.1"
edition = "2021"
authors = ["Mahmudsudo <blinkztyler@gmail.com>"]
description = "A Rust implementation of the Circuit Breaker pattern for building resilient and fault-tolerant systems."
license = "Apache-2.0"
repository = "https://github.com/mahmudsudo/circuit_breaker.git"



[lib]
name = "circuit_breaker"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dev-dependencies]

criterion = "0.3"

[dependencies]
